@@ -15,6 +15,7 @@ $catagories = Preference::get_catagories();
 ?>
       <li id="sb_preferences_sections_<?php echo $f_name; ?>"><a href="<?php echo $web_path; ?>/preferences.php?tab=<?php echo $name; ?>"><?php echo _($f_name); ?></a></li>
 <?php } ?>
+      <li id="sb_preferences_sections_account"><a href="<?php echo $web_path; ?>/preferences.php?tab=account"><?php echo _('Account'); ?></a></li>
     </ul>
   </li>
 <?php if ($GLOBALS['user']->has_access('100')) { ?>
